[package]
name = "frog-tg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = [
    "macros",
    "rustls",
    "ctrlc_handler",
], default-features = false }
tokio = { version = "1.49.0", features = ["full"] }
